# OpenScout

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  fly.toml  openscout.db  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  ingest.yml
docs/: DEPLOY.md
reports/: 2026-05-15.md  2026-05-16.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-28.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-21.md  2026-06-24.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-12.md  2026-07-16.md  latest.md
seeds/: institutions.yaml  researchers.yaml  topics.yaml
src/openscout/: __init__.py  alembic.ini  cli.py  cli_daily.py  cli_doctor.py  config.py  db.py  migrations.py  models.py  seeds.py
src/openscout/alembic/: env.py
src/openscout/api/: main.py  quota.py  sentry_init.py
src/openscout/brief/: data.py  generate.py
src/openscout/scraper/: affiliation_discovery.py  alphaxiv.py  anchor_expansion.py  arxiv.py  arxiv_html.py  awards.py  banner.py  bio_backfill.py  changes.py  citation_refresh.py  classify.py  code_urls.py  conference_committees.py  dblp.py  dedupe.py  deep_dive.py  email_digest.py  faculty_announcements.py  github_stars.py  hf_models.py  huggingface.py  jobs.py  lineage.py  llm.py  metric_snapshot.py  name_inference.py  news_mentions.py  openalex.py  openalex_works.py  openreview_conf.py  paperswithcode.py  patents.py  pdf_emails.py  peer_inference.py  role_inference.py  s2_sweep.py  scoring.py  semanticscholar.py  social_cards.py  step_log.py  (+5 more)
tests/: conftest.py  test_affiliation_discovery.py  test_arxiv_ingest.py  test_awards.py  test_bio_backfill.py  test_brief_render.py  test_conference_committees.py  test_deep_dive_smoke.py  test_faculty_announcements.py  test_jobs.py  test_migrations.py  test_news_mentions.py  test_openalex_helpers.py  test_patents.py  test_pdf_emails.py  test_quota.py  test_s2_sweep.py  test_scoring.py  test_scoring_calibration.py  test_step_log.py
web/: .gitignore  package-lock.json  package.json  vercel.json
web/src/: app.css  app.html
web/src/lib/: DeepDiveButton.svelte  EditionStrip.svelte  HeroSection.svelte  InvestmentLens.svelte  api.ts  (+14 more)
(+68 files in other folders)
