[project]
name = "openscout"
version = "0.1.0"
description = "All The Researchers Fit To Watch — daily tracker for early-stage AI researchers in embodied AI / world models / AI for Science."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenScout contributors" }]
keywords = ["ai", "research", "tracker", "embodied", "world-models", "ai4science"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    # DB
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.13",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Config / data
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    # Scraping
    "arxiv>=2.1",
    "httpx>=0.27",
    "selectolax>=0.3",
    "tenacity>=9.0",
    "pyalex>=0.18",          # OpenAlex API — no rate limit, has Chinese name alternatives
    "python-slugify>=8.0",   # cleaner slug generation with unicode handling
    "pypdf>=5.0",            # arXiv PDF parsing for email/affiliation extraction
    "feedgen>=1.0",          # RSS feed generation
    # LLM (for topic classification + 中文一句话)
    "anthropic>=0.40",
    # Email (v2)
    "resend>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pre-commit>=4.0",
]
homepage-scrape = [
    # Only needed for advanced homepage scraping; ~150MB install
    "playwright>=1.48",
]

[project.scripts]
openscout = "openscout.cli:app"

[project.urls]
Repository = "https://github.com/Chen17-sq/OpenScout"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openscout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
